welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:9: error: method posFin has return statement; needs result type
		return x
                ^